made the website responsive
fixed extra horizontal space

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse " id="collapseButton">
                 <ul class="navbar-nav float-right" >
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown">About Us</a>
+                        <a class="nav-link dropdown-toggle text-light" href="#"  data-toggle="dropdown">About Us</a>
 
                         <!--sublist 1-->
                         <div class="dropdown-menu">
@@ -44,10 +44,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">For Experts</a>
+                        <a class="nav-link dropdown-toggle text-light" data-toggle="dropdown" href="#">For Experts</a>
 
                         <!--sublist 2-->
-                        <div class="dropdown-menu">
+                        <div class="dropdown-menu ">
                             <a class="dropdown-item" href="#">Link 1</a>
                             <a class="dropdown-item" href="#">Link 2</a>
                             <a class="dropdown-item" href="#">Link 3</a>
@@ -69,12 +69,12 @@
         <div style="margin-top: 275px">
         <h2 class="mx-auto" style="max-width:800px;"><strong>BOOK FREE/PAID CONSULTATION WITH EXPERTS</strong></h2>
         <h3  class="mx-auto text-white" style="max-width:500px">privacy and expert verification guarenteed</h3>
-        <div class="row" >
-            <div class="col-md-12 col-md-offset-4 col col-sm-offset-2">
-                <input type="search" class="text-dark form-control" placeholder="Search name,place etc." style="width:25%;display: inline">
+
+            <div class="mx-auto" style="width:450px">
+                <input type="search" class="text-dark form-control" placeholder="Search name,place etc." style="width:60%;display: inline">
                 <button type="submit" class="btn btn-success " >FIND EXPERT</button>
             </div>
-        </div>
+
         </div>
     </div>
 
