--- a/afterLogin.html
+++ b/afterLogin.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--ldfgjldm-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/afterLoginStyle.css ">
@@ -118,17 +117,17 @@
         <h1 style="text-align: center"><strong>How Does It Works?</strong></h1>
         <div class="row ">
             <div class="col-md-4 pb-5" style="border-right: 1px dotted">
-                <h2 class="border bg-light text-dark " style="width:3rem; text-align:center"><strong>1</strong></h2>
+                <h2 class="border bg-light text-dark mx-auto" style="width:3rem; text-align:center"><strong>1</strong></h2>
                 <p><h2>Explain your problem to expert.</h2></p>
                 <p><h3>You need not to worry. We verify each expert profile on sign up.All your data is private with us.</h3></p>
             </div>
             <div class="col-md-4" style="border-right: 1px dotted ">
-                <h2 class="border bg-light text-dark" style="width:3rem; text-align:center"><strong>2</strong></h2>
+                <h2 class="border bg-light text-dark mx-auto" style="width:3rem; text-align:center"><strong>2</strong></h2>
                 <p><h2>You will be provided with time slot after appointment.</h2></p>
                 <p><h3>The expert will first read your writeup. Then he will talk to you by video/audio call or chat depending upon your preference.</h3> </p>
             </div>
             <div class="col-md-4">
-                <h2 class="border bg-light text-dark" style="width:3rem; text-align:center"><strong>3</strong></h2>
+                <h2 class="border bg-light text-dark mx-auto" style="width:3rem; text-align:center"><strong>3</strong></h2>
                 <p><h2>You will be provided with the best solution by expert in pdf format.</h2></p>
                 <p><h3>Once the expert listens your doubt, he will provide you the advice/suggestion in pdf format with his signature.</h3></p>
             </div>
@@ -153,7 +152,7 @@
                 <div class="carousel-item active" >
                     <div class="card" >
                         <div class="card-body" style="background-color: #f1f1f1">
-                            <h1 class=" mx-auto">The consultation on MeetMyExpert was really superb.</h1>
+                            <h1 >The consultation on MeetMyExpert was really superb.</h1>
                             <p class="card-text mx-auto"><h3>The Expert were also well qualified and highly recommended</h3></p>
                         </div>
                     </div>
@@ -208,7 +207,7 @@
         </div>
     </div>
 
-    <!-- body bottom most showing FAQ-->
+    <!-- body bottom most showing FAQ using accordian-->
     <div class="container-fluid" style="background-color: #f1f1f1">
         <div class="row">
             <div class="col-md-8">
@@ -296,11 +295,12 @@
         </div>
     </div>
 
-    <!--footer-->
+    <!-- footer -->
     <div class="footer container-fluid bg-secondary pt-4 " id="footer">
         <div class="row">
-            <div class="col-sm-3">
-                <ul style="list-style-type: none" >
+
+            <div class="col-sm-3 col-xs-12">
+                <ul style="list-style-type: none; display:block;" >
                     <li><a href="#" class="text-light" >Help Centre</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Privacy Policy</a></li>
@@ -308,12 +308,15 @@
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="col-sm-6 " >
-                <h2 style="width:40rem" class="mx-auto text-light"><strong>Meet MY Expert</strong></h2><br>
-                <p class=" mx-auto " style="width:40rem">Copyright&#169;2018. All Rights Reserved</p>
+
+            <div class="col-sm-6 col-xs-12 " style="text-align: center; line-height:0.5rem;" >
+                <h2  class=" text-light" ><strong>Meet MY Expert</strong></h2><br>
+                <p >Copyright&#169;2018. All Rights Reserved</p>
             </div>
-            <div class="col-sm-3">
-                <p ><strong>Connect us</strong></p>
+
+            <div class="col-sm-3 col-xs-12" >
+                <div class="mx-auto" style="max-width: 100px">
+                 <p ><strong>Connect us</strong></p>
                 <table>
                     <tr>
                         <td class="py-2 px-2"><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Youtube_icon.svg/1024px-Youtube_icon.svg.png"
@@ -328,7 +331,7 @@
                                             height="40px" width="40px" alt="linkedin-image"></a></td>
                     </tr>
                 </table>
-
+                </div>
             </div>
         </div>
     </div>
