--- a/searchExperts.html
+++ b/searchExperts.html
@@ -11,8 +11,8 @@
 
     <title>searchExperts</title>
 </head>
-<body>
-<div class="container-fluid p-0">   <!--parent class-->
+<body class="mainBody">
+<div class="container-fluid p-0" style="width: 100%">   <!--parent class-->
 
      <!--top most header-->
     <div class="topHeader container-fluid m-0">
@@ -59,15 +59,15 @@
     <div class="space" style="height:0.3rem; "></div>
 
     <!-- bottom and last header-->
-    <div class="bottomHeader container-fluid ">
+    <div class="bottomHeader container-fluid">
         <div class="row  text-light py-1">
-            <div class="col-md-4 mx-auto">
+            <div class="col-md-4 col-xs-12 mx-auto">
                 <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-home"></i>Expert in</h4></a>
             </div>
-            <div class="col-md-4 mx-auto">
+            <div class="col-md-4 col-xs-12 mx-auto">
                 <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-user"></i>All Filters </h4></a>
             </div>
-            <div class="col-md-4 mx-auto">
+            <div class="col-md-4 col-xs-12 mx-auto">
                 <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-education"></i>Sort By</h4>
                 </a>
             </div>
@@ -75,96 +75,107 @@
     </div>
 
     <!-- Experts info cards-->
-    <div class="container-fluid row my-5 mx-0 px-0">
-        <!-- FIRST CARD IN SAME ROW-->
-        <div class="col-md-1 border border-right-0 px-0 left">
-            <div class="profilePic ">
-                <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
-                 class="img img-responsive" alt="profile_pic">
+    <div class="container-fluid px-3">
+        <div class="container-fluid row my-5 mx-0 px-0  text-dark mb-5 ">
+            <!-- FIRST CARD IN SAME ROW-->
+            <div class="col-md-6 col-xs-12 expertListView pt-3">
+                <div class="row expertListViewRow">
+                <div class="col-md-7 col-xs-12 px-3 center " >
+                    <div class="profilePic ">
+                        <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
+                         class="img-fluid mt-3" alt="profile_pic">
+                    </div>
+                    <p>Dr. Sanjeev Kumar<br>
+                        MBBS, MD-Dermatologist<br>
+                        11 years Experience<br>
+                        Dermatologist,Skin Care,Dietician<br><br>
+                        Manish Homeo Clinic</p>
+                    <ul class="workplacePics mb-0">
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                    </ul>
+                    <p>MME ID:DR5123B<br>
+                        <a href="#"> view profile</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-xs-12 px-0 mt-3 right">
+                    <ul>
+                        <li><i class="material-icons">thumb_up</i> 98%(4000 votes)</li>
+                        <li><i class="material-icons">chat</i> <a href="#">229 feedback</a></li>
+                        <li><i class="material-icons">location_on</i> <a href="#">banglore</a></li>
+                        <li><i class="material-icons">euro_symbol</i> 150</li>
+                    </ul>
+                    <br><br>
+                    <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
+                    <div  style="height:2px"></div>
+                    <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
+                </div>
+                <div class="col-md-1 col-xs-12 bg-light"></div>
+                </div>
+
+            </div>
+
+            <!-- SECOND CARD IN SAME ROW-->
+            <div class="col-md-6 col-xs-12 expertListView pt-3">
+                <div class="row expertListViewRow">
+                <div class="col-md-1 col-xs-12 bg-light"></div>
+                <div class="col-md-7 col-xs-12 px-3 center " >
+                    <div class="profilePic ">
+                        <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
+                         class="img-fluid mt-3" alt="profile_pic">
+                    </div>
+                    <p>Dr. Sanjeev Kumar<br>
+                        MBBS, MD-Dermatologist<br>
+                        11 years Experience<br>
+                        Dermatologist,Skin Care,Dietician<br><br>
+                        Manish Homeo Clinic</p>
+                    <ul class="workplacePics mb-0">
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                        <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
+                        class="img thumbnail" alt="workplace"></a></li>
+                    </ul>
+                    <p>MME ID:DR5123B<br>
+                        <a href="#"> view profile</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-xs-12 px-0 mt-3 right">
+                    <ul>
+                        <li><i class="material-icons">thumb_up</i> 98%(4000 votes)</li>
+                        <li><i class="material-icons">chat</i> <a href="#">229 feedback</a></li>
+                        <li><i class="material-icons">location_on</i> <a href="#">banglore</a></li>
+                        <li><i class="material-icons">euro_symbol</i> 150</li>
+                    </ul>
+                    <br><br>
+                    <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
+                    <div  style="height:2px"></div>
+                    <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
+                </div>
+
+                </div>
+
             </div>
 
         </div>
-        <div class="col-md-3 border border-right-0 border-left-0 px-0 center" >
-             <p>Dr. Sanjeev Kumar<br>
-                MBBS, MD-Dermatologist<br>
-                11 years Experience<br>
-                Dermatologist,Skin Care,Dietician<br><br>
-                Manish Homeo Clinic</p>
-            <ul class="workplacePics mb-0">
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-            </ul>
-            <p>MME ID:DR5123B<br>
-                <a href="#"> view profile</a>
-            </p>
-        </div>
-        <div class="col-md-2 border border-left-0 px-0 right">
-            <ul>
-                <li><i class="material-icons">thumb_up</i> 98%(4000 votes)</li>
-                <li><i class="material-icons">chat</i> <a href="#">229 feedback</a></li>
-                <li><i class="material-icons">location_on</i> <a href="#">banglore</a></li>
-                <li><i class="material-icons">euro_symbol</i> 150</li>
-            </ul>
-            <br><br>
-            <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
-            <div  style="height:2px"></div>
-            <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
-        </div>
-
-        <!-- SECOND CARD IN SAME ROW-->
-        <div class="col-md-1 border border-right-0 px-0 left">
-            <div class="profilePic ">
-                <img src="https://images.duckduckgo.com/iu/?u=https%3A%2F%2Fx1.xingassets.com%2Fassets%2Ffrontend_minified%2Fimg%2Fusers%2Fnobody_m.original.jpg&f=1"
-                 class="img img-responsive" alt="profile_pic">
-            </div>
 
         </div>
-        <div class="col-md-3 border border-right-0 border-left-0 px-0 center" >
-             <p>Dr. Sanjeev Kumar<br>
-                MBBS, MD-Dermatologist<br>
-                11 years Experience<br>
-                Dermatologist,Skin Care,Dietician<br><br>
-                Manish Homeo Clinic</p>
-            <ul class="workplacePics mb-0">
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-                <li><a href="#"><img src="https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fblog.mailchimp.com%2Fwp-content%2Fuploads%2F2008%2F05%2Fwordpress_logo.png&f=1"
-                class="img thumbnail" alt="workplace"></a></li>
-            </ul>
-            <p>MME ID:DR5123B<br>
-                <a href="#"> view profile</a>
-            </p>
-        </div>
-        <div class="col-md-2 border border-left-0 px-0 right">
-            <ul>
-                <li><i class="material-icons">thumb_up</i> 98%(4000 votes)</li>
-                <li><i class="material-icons">chat</i> <a href="#">229 feedback</a></li>
-                <li><i class="material-icons">location_on</i> <a href="#">banglore</a></li>
-                <li><i class="material-icons">euro_symbol</i> 150</li>
-            </ul>
-            <br><br>
-            <button type="submit" class="btn btn-primary disabled btn-sm ">Book Appointment</button>
-            <div  style="height:2px"></div>
-            <button type="submit" class="btn btn-primary btn-sm ">Book Consultation</button>
-        </div>
 
-
-
-    <!-- footer
+    <!-- footer -->
     <div class="footer container-fluid bg-secondary pt-4 " id="footer">
         <div class="row">
-            <div class="col-sm-3">
-                <ul style="list-style-type: none" >
+
+            <div class="col-sm-3 col-xs-12">
+                <ul style="list-style-type: none; display:block;" >
                     <li><a href="#" class="text-light" >Help Centre</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Privacy Policy</a></li>
@@ -172,12 +183,15 @@
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="col-sm-6 " >
-                <h2 style="width:40rem" class="mx-auto text-light"><strong>Meet MY Expert</strong></h2><br>
-                <p class=" mx-auto " style="width:40rem">Copyright&#169;2018. All Rights Reserved</p>
+
+            <div class="col-sm-6 col-xs-12 " style="text-align: center; line-height:0.5rem;" >
+                <h2  class=" text-light" ><strong>Meet MY Expert</strong></h2><br>
+                <p >Copyright&#169;2018. All Rights Reserved</p>
             </div>
-            <div class="col-sm-3">
-                <p ><strong>Connect us</strong></p>
+
+            <div class="col-sm-3 col-xs-12" >
+                <div class="mx-auto" style="max-width: 100px">
+                 <p ><strong>Connect us</strong></p>
                 <table>
                     <tr>
                         <td class="py-2 px-2"><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Youtube_icon.svg/1024px-Youtube_icon.svg.png"
@@ -192,11 +206,13 @@
                                             height="40px" width="40px" alt="linkedin-image"></a></td>
                     </tr>
                 </table>
-
+                </div>
             </div>
         </div>
     </div>
-    -->
+
+
+
 </div>
 
 <!--javascriptcdn goes here-->
