--- a/afterLogin.html
+++ b/afterLogin.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+    <script src="afterLogin.js"></script>
     <title>welcome User</title>
 </head>
 <body>
@@ -70,10 +70,10 @@
 
             <!-- bottom and last header-->
     <div class="bottomHeader container-fluid ">
-        <div class="row  text-light py-1">
+        <div class="row  text-light py-1 heading">
             <div class="col-md-1 mx-auto"></div>
-            <div class="col-md-2 mx-auto">
-                <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-home"></i>HOME</h4></a>
+            <div class="col-md-2  mx-auto">
+                <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-home"></i><span class="home">HOME</span></h4></a>
             </div>
             <div class="col-md-2 mx-auto">
                 <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-user"></i>FIND AN EXPERT </h4></a>
@@ -92,6 +92,20 @@
             <div class="col-md-1 mx-auto"></div>
         </div>
     </div>
+
+    <!--bottom header for small screen-->
+        <div class="container-fluid px-0">
+            <table class="bottomHeaderSm mx-0">
+                <tr>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-home "></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-user "></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-list-alt"></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-align-justify"></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-bell"></i></h2></a></td>
+                </tr>
+            </table>
+        </div>
+
 
     <!--body top showing features and pricing-->
     <div class="container-fluid pl-5 py-5" style="background-color: #f1f1f1">
