--- a/chooseDepartment.html
+++ b/chooseDepartment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/chooseDepartment.css">
+    <link rel="stylesheet" href="chooseDepartment.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -58,7 +58,7 @@
        <!--space between headers-->
     <div class="space" style="height:0.3rem; "></div>
         <!-- bottom and last header-->
-    <div class="bottomHeader container-fluid ">
+    <div class="bottomHeader container-fluid sticky-top"  >
         <div class="row  text-light py-1">
             <div class="col-md-3 mx-auto">
                 <a href="#" class="text-light"><h4><i class="glyphicon glyphicon-home"></i>HOME</h4></a>
@@ -77,15 +77,15 @@
         </div>
     </div>
         <!--all the Departments using div-->
-    <div class="container-fluid px-0 ">
-      <div class="container-fluid row bg-primary mx-0 pt-5 ">
+    <div class="container-fluid bg-light px-0 ">
+      <div class="container-fluid row  mx-0 pt-5 ">
 
           <div class="col-md-2 "></div>
           <div class="col-md-2 bg-primary border pt-5 pb-3 block1 ">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block2" style="display:none">
+          <div  class="col-md-2 border pt-5 pb-3 block2 " style="display:none ; background-color:#F44336">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -95,7 +95,7 @@
               <img class="mx-auto " style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block4" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block4" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -105,7 +105,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block6" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block6" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -115,7 +115,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block8" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block8" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -124,14 +124,14 @@
           <div class="col-md-2"></div>
 
       </div>
-      <div class="container-fluid row bg-primary mx-0 ">
+      <div class="container-fluid row  mx-0 ">
 
           <div class="col-md-2 "></div>
           <div class="col-md-2 bg-primary border pt-5 pb-3 block9 ">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block10" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block10" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -141,7 +141,7 @@
               <img class="mx-auto " style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block12" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block12" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -151,7 +151,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block14" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block14" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -161,7 +161,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block16" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block16" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -170,14 +170,14 @@
           <div class="col-md-2"></div>
 
       </div>
-      <div class="container-fluid row bg-primary mx-0 ">
+      <div class="container-fluid row  mx-0 ">
 
           <div class="col-md-2 "></div>
           <div class="col-md-2 bg-primary border pt-5 pb-3 block17 ">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block18" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block18" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -187,7 +187,7 @@
               <img class="mx-auto " style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block20" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block20" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -197,7 +197,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block22" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block22" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -207,7 +207,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block24" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block24" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -216,14 +216,14 @@
           <div class="col-md-2"></div>
 
       </div>
-      <div class="container-fluid row bg-primary mx-0 pb-5 ">
+      <div class="container-fluid row  mx-0 pb-5 ">
 
           <div class="col-md-2 "></div>
           <div class="col-md-2 bg-primary border pt-5 pb-3 block25 ">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block26" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block26" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -233,7 +233,7 @@
               <img class="mx-auto " style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block28" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block28" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -243,7 +243,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block30" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block30" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -253,7 +253,7 @@
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Agricultutre/Floriculture</h4>
           </div>
-          <div class="col-md-2 bg-secondary border pt-5 pb-3 block32" style="display:none">
+          <div class="col-md-2  border pt-5 pb-3 block32" style="display:none">
               <img class="mx-auto" style="display:block;" src="https://quikconsult.com/uploads/expertise/1/Agriculture.png" alt="leaf img">
               <h4 style="text-align:center;">Description about it</h4>
           </div>
@@ -308,6 +308,6 @@
   </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-    <script src="../js/chooseDepartment.js"></script>
+    <script src="chooseDepartment.js"></script>
 
 </body>
