created expert info page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/indexStyle.css">
+    <link rel="stylesheet" href="indexStyle.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Meet My Expert</title>
@@ -96,9 +96,8 @@
                 <tr>
                     <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-home "></i></h2></a></td>
                     <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-user "></i></h2></a></td>
-                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-list-alt"></i></h2></a></td>
-                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-align-justify"></i></h2></a></td>
-                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-bell"></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-education"></i></h2></a></td>
+                    <td class="text-center text-light"><a href="#"><h2><i class="glyphicon glyphicon-search"></i></h2></a></td>
                 </tr>
             </table>
         </div>
@@ -311,7 +310,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.5/slick.min.js" type="module"></script>
 
 <!-- native script link-->
-<script src="../js/indexScript.js"></script>
+<script src="indexScript.js"></script>
 
 <!--<script href="/home/anshuman/PycharmProjects/untitled2/js/bootstrap.bundle.js"></script>
 <script href="/home/anshuman/PycharmProjects/untitled2/js/bootstrap.js"></script>
